<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chat">

    <LinearLayout
        android:id="@+id/topMensajeXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/return2InicioXML"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/back"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:onClick="goBack"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white" />


            <ImageButton
                android:id="@+id/imgChatsXML"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                tools:ignore="SpeakableTextPresentCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtWF2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"

                android:text="@string/mensajeChat"

                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/makeVideoCallMensajeXML"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/videocall"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_round_videocam_24"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/makeCallMensajeXML"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/voice_call"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_baseline_call_24"
                app:tint="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rViewMensajeXML"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/txtMensajLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topMensajeXML" />

    <LinearLayout
        android:id="@+id/txtMensajLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/radius3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/emojisbtnMensajeXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/emojis"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_tag_faces_24"
            app:tint="@color/gray" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:text="@string/message"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/filebtnMensajeXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/send_file"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_attach_file_24"
            app:tint="@color/gray" />

        <ImageButton
            android:id="@+id/imgbtnMensajeXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/send_a_picture"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_baseline_photo_camera_24"
            app:tint="@color/gray" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"

        android:contentDescription="mandarAudio"
        app:backgroundTint="@color/teal_700"
        app:fabSize="mini"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_mic_24"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>