<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Estados">

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#009688"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/layoutTxt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:orientation="horizontal">

      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/txtWF"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="15dp"

          android:text="@string/app_name"

          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Display1"
          android:textColor="@color/white"
          android:textSize="24sp"
          android:textStyle="normal" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="end"
          android:gravity="end"
          android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSatusXML"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/searchStatus"

            app:icon="@drawable/ic_baseline_search_24"
            app:iconGravity="end"
            app:iconTint="@color/white"
            app:strokeWidth="0dp">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topLayoutBarMenu2XML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

          <com.google.android.material.appbar.MaterialToolbar
              android:id="@+id/topMenu2XML"
              style="@style/Widget.MaterialComponents.Toolbar.Primary"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#00FFFFFF"
              app:menu="@menu/menu2" />
        </com.google.android.material.appbar.AppBarLayout>

      </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btnNavXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_menu" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">

      <ImageButton
          android:id="@+id/imgStatusXML2"
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:scaleType="centerCrop"
          tools:ignore="SpeakableTextPresentCheck"
          tools:srcCompat="@tools:sample/avatars" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/loutTXTUser"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">


          <com.google.android.material.textview.MaterialTextView
              android:id="@+id/usuarioStatusXML"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="2dp"
              android:text="@string/usuario"
              android:textAppearance="?attr/textAppearanceHeadline6"
              android:textSize="16sp" />

          <com.google.android.material.textview.MaterialTextView
              android:id="@+id/StatusInfoXML"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="2dp"
              android:text="@string/status"
              android:textAppearance="?attr/textAppearanceBody2"
              android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

      </LinearLayout>

      <!-- Buttons -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <TextView
          android:id="@+id/recentUpdates"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:text="@string/updatesStatus"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textColor="@color/gray"
          android:textSize="12sp"
          android:textStyle="bold" />
    </LinearLayout>
  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rViewStatusXML"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton

      android:id="@+id/btnNewStatusXML"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:contentDescription="@string/new_status"

      android:onClick="newStatus"

      app:backgroundTint="@color/teal_700"
      app:icon="@drawable/ic_baseline_photo_camera_24"

      app:iconTint="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton

      android:id="@+id/btnNewStatusTextXML"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:contentDescription="@string/new_text_status"

      android:onClick="newStatusText"

      app:backgroundTint="@color/gray2"
      app:icon="@drawable/ic_baseline_mode_edit_outline_24"

      app:iconTint="@color/gray3"
      app:layout_constraintBottom_toTopOf="@+id/btnNewStatusXML"
      app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>