<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Imagen -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <ImageButton
                android:id="@+id/imgXML"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                tools:ignore="SpeakableTextPresentCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <!-- Usuario -->
            <LinearLayout
                android:id="@+id/layoutTXT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/loutTXTUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/usuarioXML"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:text="@string/usuario"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mensajeXML"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:text="@string/mensaje"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>

                <!-- Hora -->
                <LinearLayout
                    android:id="@+id/loutTXTHora"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/horaXML"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|top"
                        android:padding="5dp"
                        android:text="@string/hora"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                </LinearLayout>
            </LinearLayout>

            <!-- Buttons -->

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>